--- a/services-details-Systeme-De-Controle-Dacces.html
+++ b/services-details-Systeme-De-Controle-Dacces.html
@@ -100,7 +100,7 @@
 			<div class="navbar-area">
 				<div class="mobile-nav">
 					<div class="container">
-						<a href="index-6.html" class="logo">
+						<a href="index.html" class="logo">
 							<img src="assets/img/logo.png" alt="Logo">
 						</a>
 					</div>
@@ -109,14 +109,14 @@
 				<div class="main-nav">
 					<div class="container">
 						<nav class="navbar navbar-expand-md">
-							<a class="navbar-brand" href="index-6.html">
+							<a class="navbar-brand" href="index.html">
 								<img src="assets/img/logo.png" alt="Logo">
 							</a>
 							
 							<div class="collapse navbar-collapse mean-menu">
 								<ul class="navbar-nav ms-auto py-4 py-lg-8">
 									<li class="nav-item">
-										<a href="index-6.html" class="nav-link">
+										<a href="index.html" class="nav-link">
 											Acceuil
 										</a>
 									</li>
@@ -185,7 +185,7 @@
 					<h2>Contrôle d'Accès</h2>
 					<ul>
 						<li>
-							<a href="index-6.html">
+							<a href="index.html">
 								<i class="bx bx-home"></i>
 								Acceuil 
 							</a>
@@ -374,7 +374,7 @@
 				<div class="row">
 					<div class="col-lg-4 col-md-6">
 						<div class="single-footer-widget">
-							<a href="index-6.html" class="logo">
+							<a href="index.html" class="logo">
 								<img src="assets/img/logo.png" alt="Image">
 							</a>
 
