--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
 <!-- Mirrored from templates.envytheme.com/seqty/default/index-5.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 27 Mar 2023 11:55:34 GMT -->
 
-<!-- Mirrored from ikwhat.com/repository-016/thara/index-6.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Feb 2024 18:41:35 GMT -->
+<!-- Mirrored from ikwhat.com/repository-016/thara/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Feb 2024 18:41:35 GMT -->
 <head>
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
@@ -102,7 +102,7 @@
 			<div class="navbar-area navbar-area-five">
 				<div class="mobile-nav">
 					<div class="container">
-						<a href="index-6.html" class="logo">
+						<a href="index.html" class="logo">
 							<img src="assets/img/logo.png" alt="Logo">
 						</a>
 					</div>
@@ -111,14 +111,14 @@
 				<div class="main-nav">
 					<div class="container">
 						<nav class="navbar navbar-expand-md">
-							<a class="navbar-brand" href="index-6.html">
+							<a class="navbar-brand" href="index.html">
 								<img src="assets/img/logo.png" alt="Logo">
 							</a>
 							
 							<div class="collapse navbar-collapse mean-menu">
 								<ul class="navbar-nav ms-auto py-4 py-lg-8">
 									<li class="nav-item">
-										<a href="index-6.html" class="nav-link active">
+										<a href="index.html" class="nav-link active">
 											Acceuil
 										</a>
 									</li>
@@ -611,7 +611,7 @@
 				<div class="row">
 					<div class="col-lg-4 col-md-6">
 						<div class="single-footer-widget">
-							<a href="index-6.html" class="logo">
+							<a href="index.html" class="logo">
 								<img src="assets/img/logo.png" alt="Image">
 							</a>
 
@@ -740,5 +740,5 @@
 
 <!-- Mirrored from templates.envytheme.com/seqty/default/index-5.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 27 Mar 2023 11:55:34 GMT -->
 
-<!-- Mirrored from ikwhat.com/repository-016/thara/index-6.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Feb 2024 18:41:47 GMT -->
+<!-- Mirrored from ikwhat.com/repository-016/thara/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Feb 2024 18:41:47 GMT -->
 </html>
